tests/ft/type_checking/valid/binary_op.jk
t0 = 1 * 4;
t2 = 0.5 + 0.4;
