tests/ft/type_checking/invalid/binary_op.jk
t0 = 1 + true;
// t1 = 1 + 0.5;
// t2 = 0.5 + 4;
